# slide-programs

./: .gitignore  Anchor.toml  buffer.json  package.json
programs/riptide-q1/: Cargo.toml
programs/riptide-q1/src/: lib.rs
programs/slide/: .gitignore  Cargo.toml
programs/slide/src/: instructions.rs  lib.rs  state.rs  utils.rs
programs/slide/src/instructions/: main.rs  mod.rs  spl_gov.rs  squads.rs
programs/slide/src/state/: access.rs  account_type.rs  expense.rs  mod.rs  proposal.rs  spl_gov.rs  squads.rs  user.rs
programs/slide/src/utils/: error.rs
tests/: program_rpc.ts  riptide-q1.ts  slide.ts  spl_gov.ts  squads.ts  squads_sdk.ts  utils.ts
tests/squads_sdk/: address.ts  index.ts  instruction.ts  withAddMembersToSquad.ts  withCastVote.ts  withCreateProposalAccount.ts  withCreateSquad.ts  withExecuteProposal.ts
