[package]
name = "slide"
version = "0.1.0"
description = "Solana Programs for Slide"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "slide"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
spl-governance = { version = "2.2.2", features = ["no-entrypoint"] }
squads-program = { git = "https://github.com/emdoyle/program", features = ["no-entrypoint"] }
