[package]
name = "slide"
version = "0.1.0"
description = "Solana Programs for Slide"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "slide"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/emdoyle/anchor", branch = "dynamic-owner" }
anchor-spl = { git = "https://github.com/emdoyle/anchor", branch = "dynamic-owner" }
solana-program = "1.9.13"
spl-governance = { version = "2.2.2", features = ["no-entrypoint"] }
squads-program = { version = "2.0.1", features = ["no-entrypoint"] }
